# micro

./: .gitignore  docker-compose.yml
backend-api/: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
backend-api/models/price_prediction/: prophet_midprice_15m.pkl
backend-api/src/lob_microstructure_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend-api/src/lob_microstructure_analysis/api/: main.py  models.py  websocket.py
backend-api/src/lob_microstructure_analysis/context/: price_context.py
backend-api/src/lob_microstructure_analysis/core/: event_inference.py  events.py  features.py  orderbook.py  processor.py
backend-api/src/lob_microstructure_analysis/ingestion/: binance_client.py  data_source.py  loader.py  types.py
backend-api/src/lob_microstructure_analysis/ml/: dataset_check.py  feature_store.py  labeling.py  model_loader.py  predictor.py  price_from_L2.py  price_prophet.py  signal_aggregator.py  train.py
backend-api/src/lob_microstructure_analysis/models/: feature_names_20260106_231408.pkl  lgbm_model_20260106_231408.txt  model_metadata_20260106_231408.pkl
backend-api/tests/: test_binance_integration.py  test_orderbook.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts.timestamp-1768039801609-b2d6839f45e7a.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedChartBackground.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AuthCallBack.tsx  Index.tsx  auth.tsx  dashboard.tsx
(+3 files in other folders)
